# mutual_concept_loss

./: .gitignore  README.md  pyproject.toml
docs/: phase6_実験手順.md  test_specification.md  共有サブスペースX実装計画.md  共有サブスペースxに基づく小規模構成的一般化の実験計画書.md
scripts/: analyze_representation.py  eval_zero_shot.py  finetune_few_shot.py  generate_experiment_datasets.py  train_ablation_no_shared.py  train_ablation_no_sparse.py  train_baseline.py  train_general.py  train_once.py
src/mutual_concept_loss/: __init__.py
src/mutual_concept_loss/analysis/: __init__.py  cka.py  collection.py  grassmann.py  sparse.py
src/mutual_concept_loss/data/: __init__.py  generator.py  primitives.py  sampler.py  transforms.py
src/mutual_concept_loss/losses/: __init__.py  manager.py  share.py  sparse_autoencoder.py  task.py
src/mutual_concept_loss/models/: __init__.py  adapters.py  bottleneck.py  decoder.py  encoder.py  shared_autoencoder.py  sparse_autoencoder.py
src/mutual_concept_loss/training/: __init__.py  cli.py  evaluation.py  few_shot.py  loop.py  scheduler.py
src/mutual_concept_loss/utils/: seed.py
tests/analysis/: test_cka.py  test_collection.py  test_grassmann.py  test_sparse.py
tests/data/: test_generator.py  test_primitives.py  test_sampler.py  test_transforms.py
tests/losses/: test_losses.py
tests/models/: test_adapters.py  test_shared_autoencoder.py
tests/training/: test_few_shot.py  test_loop.py
