[project]
name = "mutual-concept-loss"
version = "0.1.0"
description = "共有サブスペースX仮説を検証するための最小実験基盤"
readme = "README.md"
authors = [
    { name = "mutual-concept-loss contributors" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.2.0",
    "numpy==1.26.4",
    "filelock==3.13.1",
    "sympy==1.12",
    "networkx==3.1",
    "jinja2==3.1.3",
    "typing-extensions==4.9.0",
    "tensorboard==2.15.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
